syntax = "proto3";
package productservice;

message Product {
    string id = 1;
    string thumbnail = 2;
    string nome = 3;
    uint64 preço = 4;
    repeated string ingredientes = 5;
    int32 disponibilidade = 6;
    float volume = 7;
    string createdAt = 8;
    string updatedAt = 9;
}

message ProductCreation {
    string thumbnail = 1;
    string nome = 2;
    uint64 preço = 3;
    repeated string ingredientes = 4;
    int32 disponibilidade = 5;
    float volume = 6;
}

message ProductId {
    string id = 1;
}

message ProductList {
    uint64 totalProducts = 1;
    repeated Pharmacy products = 2;
}

message QueryParams {
    int64 page = 1;
	int64 take = 2;
	string keyword = 3;
}

message NoParams {}

service ProductService {
    rpc getProduct(Product) returns (Product);
    rpc getAllProducts(QueryParams) returns (ProductList);
    rpc createProduct(ProductCreation) returns (Product);
    rpc deleteProduct(ProductId) returns (NoParams);
    rpc updateProduct(Product) returns (Product);
}